--- a/test/base.styl
+++ b/test/base.styl
@@ -1,19 +1,117 @@
-// @describe Icons
+// @describe Responsive
 
-// @it Base
+// @it Between
 
-icon-namespace-set('FontAwesome', 'fa')
++between(xs, md)
+    body
+        some 1px
 
-icon-add('phone', 'p')
-icon-add('email', 'e')
++between(120px, 120em)
+    body
+        some 1px
 
-.ic
-    icon-apply()
++between(xs, 120em)
+    body
+        some 1px
 
 // @expects
 
-.ic-fa:before{display:inline-block;height:1px;width:1em;font-style:normal;font-weight:400;speak:none;line-height:1px;text-decoration:inherit;text-align:center;text-rendering:optimizeLegibility;vertical-align:inherit;vertical-align:middle;content:"";text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-smoothing:antialiased}
-.ic-fa{display:inline}
-.ic-fa:before{font-family:FontAwesome}
-.ic-fa--phone:before{content:'p'}
-.ic-fa--email:before{content:'e'}
+
+@media only screen and (min-width:320px) and (max-width:719px){body{some:1px}}
+@media only screen and (min-width:120px) and (max-width:1919px){body{some:1px}}
+@media only screen and (min-width:320px) and (max-width:1919px){body{some:1px}}
+
+// @it Above(from)
+
++above(xs)
+    body
+        some 1px
+
++above(120em)
+    body
+        some 1px
+
++above(120px)
+    body
+        some 1px
+
+// @expects
+
+
+@media only screen and (min-width:320px){body{some:1px}}
+@media only screen and (min-width:120em){body{some:1px}}
+@media only screen and (min-width:120px){body{some:1px}}
+
+
+// @it Below(to)
+
++below(xs)
+    body
+        some 1px
+
++below(120em)
+    body
+        some 1px
+
++below(120px)
+    body
+        some 1px
+
+// @expects
+
+
+@media only screen and (max-width:319px){body{some:1px}}
+@media only screen and (max-width:1919px){body{some:1px}}
+@media only screen and (max-width:119px){body{some:1px}}
+
+
+// @it Orientation
+
++below(xs, o:portrait)
+    body
+        some 1px
+
+// @expects
+
+
+@media only screen and (max-width:319px) and (orientation:portrait) {body{some:1px}}
+
+
+// @it Density
+
++below(xs, d:1.3)
+    body
+        some 1px
+
++below(xs, d:retina)
+    body
+        some 1px
+
+// @expects
+
+@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.3) and (min--moz-device-pixel-ratio:1.3) and (-o-min-device-pixel-ratio:1.3/1) and (min-device-pixel-ratio:1.3) and (min-resolution:93.6dpi){body{some:1px}}
+@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.5) and (min--moz-device-pixel-ratio:1.5) and (-o-min-device-pixel-ratio:1.5/1) and (min-device-pixel-ratio:1.5) and (min-resolution:108dpi){body{some:1px}}
+
+
+// @it Cachable
+
+Responsive.cachable = true
+
++below(xs)
+    body
+        some 1px
+
++below(xs)
+    body
+        some 1px
+
++below(xs)
+    body
+        some 1px
+
+-responsive-apply-cache()
+
+// @expects
+
+
+@media only screen and (max-width:319px){body{some:1px}body{some:1px}body{some:1px}}
