--- a/test/base.styl
+++ b/test/base.styl
@@ -17,9 +17,9 @@
 // @expects
 
 
-@media only screen and (min-width:320px) and (max-width:719px){body{some:1px}}
-@media only screen and (min-width:120px) and (max-width:1919px){body{some:1px}}
-@media only screen and (min-width:320px) and (max-width:1919px){body{some:1px}}
+@media only screen and (max-width:719px) and (min-width:320px){body{some:1px}}
+@media only screen and (max-width:1919px) and (min-width:120px){body{some:1px}}
+@media only screen and (max-width:1919px) and (min-width:320px){body{some:1px}}
 
 // @it Above(from)
 
@@ -89,29 +89,23 @@
 
 // @expects
 
-@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.3) and (min--moz-device-pixel-ratio:1.3) and (-o-min-device-pixel-ratio:1.3/1) and (min-device-pixel-ratio:1.3) and (min-resolution:93.6dpi){body{some:1px}}
-@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.5) and (min--moz-device-pixel-ratio:1.5) and (-o-min-device-pixel-ratio:1.5/1) and (min-device-pixel-ratio:1.5) and (min-resolution:108dpi){body{some:1px}}
+@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.3) and (min--moz-device-pixel-ratio:1.3) and (-o-min-device-pixel-ratio:1.3/1) and (min-device-pixel-ratio:1.3) and (min-resolution:125dpi){body{some:1px}}
+@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.5) and (min--moz-device-pixel-ratio:1.5) and (-o-min-device-pixel-ratio:1.5/1) and (min-device-pixel-ratio:1.5) and (min-resolution:144dpi){body{some:1px}}
 
 
-// @it Cachable
+// @it Config
 
-Responsive.cachable = true
+responsive-config({
+    anti-overlap: false
+})
 
-+below(xs)
+responsive-breakpoints({
+    d: 1024px
+})
+
++below(d)
     body
         some 1px
-
-+below(xs)
-    body
-        some 1px
-
-+below(xs)
-    body
-        some 1px
-
--responsive-apply-cache()
 
 // @expects
-
-
-@media only screen and (max-width:319px){body{some:1px}body{some:1px}body{some:1px}}
+@media only screen and (max-width:1024px){body{some:1px}}
