--- a/test/base.styl
+++ b/test/base.styl
@@ -17,9 +17,9 @@
 // @expects
 
 
-@media only screen and (max-width:719px) and (min-width:320px){body{some:1px}}
-@media only screen and (max-width:1919px) and (min-width:120px){body{some:1px}}
-@media only screen and (max-width:1919px) and (min-width:320px){body{some:1px}}
+@media (max-width:719px) and (min-width:320px){body{some:1px}}
+@media (max-width:1919px) and (min-width:120px){body{some:1px}}
+@media (max-width:1919px) and (min-width:320px){body{some:1px}}
 
 // @it Above(from)
 
@@ -38,9 +38,9 @@
 // @expects
 
 
-@media only screen and (min-width:320px){body{some:1px}}
-@media only screen and (min-width:120em){body{some:1px}}
-@media only screen and (min-width:120px){body{some:1px}}
+@media (min-width:320px){body{some:1px}}
+@media (min-width:120em){body{some:1px}}
+@media (min-width:120px){body{some:1px}}
 
 
 // @it Below(to)
@@ -60,9 +60,9 @@
 // @expects
 
 
-@media only screen and (max-width:319px){body{some:1px}}
-@media only screen and (max-width:1919px){body{some:1px}}
-@media only screen and (max-width:119px){body{some:1px}}
+@media (max-width:319px){body{some:1px}}
+@media (max-width:1919px){body{some:1px}}
+@media (max-width:119px){body{some:1px}}
 
 
 // @it Orientation
@@ -74,7 +74,7 @@
 // @expects
 
 
-@media only screen and (max-width:319px) and (orientation:portrait) {body{some:1px}}
+@media (max-width:319px) and (orientation:portrait) {body{some:1px}}
 
 
 // @it Density
@@ -89,8 +89,28 @@
 
 // @expects
 
-@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.3) and (min--moz-device-pixel-ratio:1.3) and (-o-min-device-pixel-ratio:1.3/1) and (min-device-pixel-ratio:1.3) and (min-resolution:125dpi){body{some:1px}}
-@media only screen and (max-width:319px) and (-webkit-min-device-pixel-ratio:1.5) and (min--moz-device-pixel-ratio:1.5) and (-o-min-device-pixel-ratio:1.5/1) and (min-device-pixel-ratio:1.5) and (min-resolution:144dpi){body{some:1px}}
+@media (max-width:319px) and (-webkit-min-device-pixel-ratio:1.3) and (min--moz-device-pixel-ratio:1.3) and (-o-min-device-pixel-ratio:1.3/1) and (min-device-pixel-ratio:1.3) and (min-resolution:125dpi){body{some:1px}}
+@media (max-width:319px) and (-webkit-min-device-pixel-ratio:1.5) and (min--moz-device-pixel-ratio:1.5) and (-o-min-device-pixel-ratio:1.5/1) and (min-device-pixel-ratio:1.5) and (min-resolution:144dpi){body{some:1px}}
+
+
+// @it Nobreakpoint
+
++below(nobreakpoint)
+    body
+        some 1px
+
+// @expects
+body{some:1px}
+
+
+// @it Only screen
+
++below(os:true)
+    body
+        some 1px
+
+// @expects
+@media only screen{body{some:1px}}
 
 
 // @it Config
@@ -108,4 +128,4 @@ responsive-breakpoints({
         some 1px
 
 // @expects
-@media only screen and (max-width:1024px){body{some:1px}}
+@media (max-width:1024px){body{some:1px}}
